<resources>
    <string name="app_name">Screen Mirroring</string>
    <string name="disconnected">disconnected</string>


    <!-- //Video Player-->
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm">are you sure you want to delete </string>
    <string name="delete_video">Delete Video ?</string>
    <string name="file_location">Location</string>
    <string name="format">Format</string>
    <string name="file_size">Size</string>
    <string name="duration">Duration</string>
    <string name="resolution">Resolution</string>
    <string name="date_added">Date</string>
    <string name="share_app_message">Download SX Video Player.\nGreat Video And Audio Player App With Whatsapp Status Saver.\nDownload Now: </string>

    <!--//Music Player-->
    <string name="bad_id">Play a song first!</string>
    <string name="unknown_year" translatable="false">N&#x2F;A</string>
    <string name="playing_song" translatable="false">&lt;b>%1s&lt;/b>&lt;br/>%2s</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="share_image_via">Share File via...</string>


    <string name="step1">TV and Mobile should be on THE SAME WIFI NETWORK</string>
    <string name="step2">Miracast Display should be ENABLED ON TV.</string>
    <string name="step3">Make sure wireless display option enabled on your mobile phone.</string>
    <string name="step4">Click below button to start mirroring</string>
    <string name="steps_to_start_mirroring">1. Steps to start mirroring :</string>


    <string name="switch_off">Connected</string>
    <string name="switch_on">Not Connected</string>

    <string name="txtwarn">Please Turn Off <b> USB Debugging </b> and \n Enjoy App Continue.</string>

</resources>
