<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fradiant_square"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/img_back"
                    android:tint="@color/white" />


                <TextView
                    android:id="@+id/txtHeader"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/text_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <com.ads.adsdemosp.AdsView.quiz_Header_AdsView
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_vpn" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/text_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/steps_to_start_mirroring"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/text_reguller"
                        android:includeFontPadding="false"
                        android:text="@string/step1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/text_reguller"
                        android:text="@string/step2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/text_reguller"
                        android:text="@string/step3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/text_reguller"
                        android:includeFontPadding="false"
                        android:text="@string/step4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_5sdp">

                <include
                    layout="@layout/layout_native_ads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/lin_start_mirroring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_button_round"
                    android:fontFamily="@font/text_medium"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="@dimen/_60sdp"
                    android:paddingVertical="@dimen/_15sdp"
                    android:text="START MIRRORING"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    <include layout="@layout/layout_native_banner_ads" />

</LinearLayout>
